# ignorante

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/ignorante/: __init__.py  __main__.py  generate.py  interactive.py  repository.py  templates.py
